--- a/lib/yojee_assignment_sep_29_simple_twitter_app_web/live/tweet_live/index.html.leex
+++ b/lib/yojee_assignment_sep_29_simple_twitter_app_web/live/tweet_live/index.html.leex
@@ -10,7 +10,7 @@
 <% end %>
 
 
-  <div id="tweets" phx-update="replace">
+  <div id="tweets">
     <%= for tweet <- @tweets do %>
       <%= live_component @socket, YojeeAssignmentSep29SimpleTwitterAppWeb.TweetLive.TweetComponent, id: tweet.id, tweet: tweet %>
     <% end %>
