--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -10,6 +10,25 @@
   box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.1);
 }
 
+.tweet-button {
+  margin: 10px 0 10px 100px;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.1);
+  background-color: white;
+  padding: 0 5px 0 5px;
+  color: #0069E0;
+}
+
+.button-2 {
+  margin: 10px 0 10px 10px;
+}
+
+.tweet-button:hover {
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.1);
+  background-color: white;
+  padding: 0 5px 0 5px;
+  color: #606C76;
+}
+
 .tweet-button-column {
   text-align: center;
   margin: 15px 0px 0px 0px;
