--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -18,6 +18,16 @@
   color: #0069E0;
 }
 
+.tweet-button-dashboard {
+  margin: 10px 0 10px 10px;
+  padding: 10px;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.1);
+  background-color: white;
+  color: #0069E0;
+  border: 1px solid #0069E0;
+  border-radius: 5px;
+}
+
 .button-2 {
   margin: 10px 0 10px 10px;
 }
