add RPC between app and gate way.

--- a/lib/yojee_assignment_sep_29_simple_twitter_app_web/live/tweet_live/index.html.leex
+++ b/lib/yojee_assignment_sep_29_simple_twitter_app_web/live/tweet_live/index.html.leex
@@ -17,7 +17,7 @@
 
 <button class="tweet-button"><%= live_patch "New Tweet", to: Routes.tweet_index_path(@socket, :new) %></button>
 <button class="tweet-button button-2" phx-click="create_1k_tweets">Create 1k tweets</button>
-<button class="tweet-button button-2" phx-click="create_1k_tweets" disabled>Create 1M tweets</button>
+<button class="tweet-button button-2" phx-click="create_1m_tweets" disabled>Create 1M tweets</button>
 <button class="tweet-button button-2" phx-click="truncate_table">Truncate table</button>
 <div class="navi">
   <%= pagination_links @page, view_style: :foundation %>
